k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenrir-backend
spec:
  selector:
    matchLabels:
      app: fenrir-backend
  template:
    metadata:
      labels:
        app: fenrir-backend
    spec:
      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Exists"
      containers:
      - name: fenrir-backend
        image: 627031163270.dkr.ecr.ap-south-1.amazonaws.com/fenrir-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "400m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fenrir-backend
spec:
  selector:
    app: fenrir-backend
  ports:
  - port: 80
    targetPort: 8000
