k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenrir-frontend
spec:
  selector:
    matchLabels:
      app: fenrir-frontend
  template:
    metadata:
      labels:
        app: fenrir-frontend
    spec:
      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Exists"
      containers:
      - name: fenrir-frontend
        image: 627031163270.dkr.ecr.ap-south-1.amazonaws.com/fenrir-frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "400m"
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: fenrir-frontend
spec:
  selector:
    app: fenrir-frontend
  ports:
  - port: 80
    targetPort: 9000
  type: LoadBalancer
